@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.28.
-.TH SUPER-SED "1" "October 2006" "super-sed version 3.63" "User Commands"
+.TH SUPER-SED "1" "April 2009" "super-sed version 3.63" "User Commands"
 .SH NAME
 super-sed \- stream editor for filtering and transforming text
 .SH SYNOPSIS
@@ -376,6 +376,9 @@ Copyright \(co 2003 Free Software Foundation, Inc.
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE,
 to the extent permitted by law.
+.PP
+E-mail bug reports to: bonzini@gnu.org .
+Be sure to include the word ``sed'' somewhere in the ``Subject:'' field.
 .SH "SEE ALSO"
 .BR awk (1),
 .BR ed (1),
