@@ -1,3 +1,10 @@
+2009-01-28  Paolo Bonzini  <bonzini@gnu.org>
+
+	* sed/sed.c (usage): Only print the bug report address for `sed --help'.
+	(main): Print it for `sed --version' too.
+	* testsuite/version.gin: Adapt.
+	* testsuite/Makefile.tests: Refine help message test.
+
 2009-01-23  Paolo Bonzini  <bonzini@gnu.org>
 	    Hideo AOKI <hideo.aoki.tk@hitachi.com>
 
